3.0.3 (released xx.xx.xxxx)
  * Fix UnicodeDecode errors when logging, especially on windows systems.
    Closes: GH bug #170
  * Added support for WIM (windows image) archives with 7z.

3.0.2 (released 21.10.2024)
  * When running in verbose mode (-vv), print mime and compression info.
  * Use official github command line client "gh" for releases.
  * Added type annotations.

3.0.1 (released 06.10.2024)
  * Use more uv command to replace other build tools, ie. twine.
  * Add new --quiet option to suppress command output.
  * Document that Windows needs a file program to be able to determine file types without extensions.
    Closes: GH bug #152

3.0.0 (released 25.09.2024)
  * When a program does not support a compression type, try to find other programs instead of failing.
    This changes some library functions which are not part of the official API, but might be used by
    other programs, hence the major version upgrade.
    Thanks to github user benjaminwinger for the idea and initial patch!
    Closes: GH bug #87
  * Better detection for tar programs which compression is supported.
    Closes: GH bug #86
  * The Python module "tarfile" supports LZMA and XZ compressed archives.
    Added tests for these archive formats (.tar.lzma and .tar.xz).
  * Do not print program output when running with verbosity=-1.
    Closes: GH bug #157


2.4.0 (released 21.08.2024)
  * Document that patool extracts the archive for the search and repack commands.
    Closes: GH bug #154
  * Add supported_formats() API function listing supported formats and operations
    for each format.
    Idea and patch by github user nohr-ai, thanks!


2.3.0 (released 26.06.2024)
  * Add linting check to github workflow CI.
    Idea and patch by sorairolake, thanks!
  * Format the python code with ruff, and
    add a check to github workflow CI.
    Idea and initial patch by sorairolake, thanks!
    Closes: GH bug #151
  * Support tar --zstd for extracting TAR archives compressed with ZSTANDARD.