@@ -2,6 +2,7 @@
   * Fix UnicodeDecode errors when logging, especially on windows systems.
     Closes: GH bug #170
   * Added support for WIM (windows image) archives with 7z.
+  * If the MIME database cannot detect the file type, check again with a lowercase filenanme extension.
 
 3.0.2 (released 21.10.2024)
   * When running in verbose mode (-vv), print mime and compression info.
